--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+@import "reset.css";
+@import "status-bar.css";
+@import "variables.css";
 
 body {
   font-family: "Permanent Marker", cursive;
 }
 
-.status-bar {
+.welcome-header {
+  margin :90px 0px;
+  text-align: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 600;
 }
 
-.status-bar__column {
-  width: 33%;
-}
-.status-bar__column:span {
-  margin-right: 5px;
+.welcome-header__title {
+  margin-bottom: 20px;
+  font-size: 25px;
 }
 
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
+.welcome-header__text {
+  width: 60%;
+  opacity: 0.7;
 }
-.status-bar__column:last-child {
+
+#login-form{
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  margin: 0px 30px;
 }
-.status-bar__column .fa-battery-full {
-  margin: 0px 5px;
+
+#login-form input:not([type="submit"]){
+  border-bottom:1px solid rgba(0,0,0,0.2);
+  transition: border-color 0.3 ease-in-out;
+}
+
+#login-form input{
+  padding: 15px 0px;
+  border: none;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  margin-bottom: 25px;
+  transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input::placeholder{
+  color: rgba(0,0,0,0.4);
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: progress;
+  font-size: 16px;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
+}
+
+#login-form a {
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  font-size: 13px;
 }
