--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,7 +17,7 @@
     }
 
 .friends-screen__channel {
-  border-top: 1px solid rgba(0,0,0,0.2);
+  border-top: var(--main-border);
   margin-top: 25px;
   padding-top: 15px;
 }
@@ -28,3 +28,4 @@
   justify-content: space-between;
   color : rgba(0,0,0,0.5);
 }
+
