--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,20 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 /*Screens*/
 
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   font-family: "Permanent Marker", cursive;
   height: 150vh;
   color : #2e363e;
 }
+
+.main__screen {
+  padding:0px var(--horizontal-space);
+}
+
