--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -2,10 +2,29 @@
   display: flex;
   padding: var(--horizontal-space);
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  padding-top: 20px;
   
+}
+.alt-header__column {
+  width: 33%;
 }
 
 .alt-header__title {
   font-size: 30px;
+}
+
+.alt-header__column:nth-child(2) {
+  text-align: center;
+}
+
+.alt-header__column:last-child {
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.alt-header__column span:last-child {
+  margin-left: 10px;
+  
 }
