--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,11 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
   font-family: "Permanent Marker", cursive;
-  height: 150vh;
+  height: 100vh;
   color : #2e363e;
 }
 
