--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -25,3 +25,16 @@
   right:25px;
   top : 50px;
 }
+
+@keyframes rotateGear {
+   from {
+    transform: none;
+    }
+   to { 
+    transform: rotateZ(360deg);
+   }
+}
+.screen-header__icons .fa-gear:hover{
+  animation: rotateGear 2s linear infinite;
+
+}
